Fix text alignment

--- a/styles/pokemon.module.css
+++ b/styles/pokemon.module.css
@@ -99,6 +99,7 @@
     border-radius:1em;
     padding:0.5em;
     margin:0.5em;
+    display: grid;
 
 }
 
@@ -108,6 +109,8 @@
 .iconText {
     border-bottom:2px solid  rgba(var(--primary-color), 1);
     font-size: 1em;
+    max-width: 84px;
+    justify-self: center;
 }
 
 .pokefilter {
